--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Homework Sheet</title>
+    <title>Upload</title>
 </head>
 <body>
-    <h1>Upload Homework Sheet</h1>
+    <h1>Upload</h1>
     <form action="/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="file">
         <input type="submit" value="Upload">
